output/GluGlu_Radion_tauTau_2017/err/file_3314620.2.err
  File "/afs/cern.ch/work/v/vdamante/public/analysis/triggerStudiesAnalysis.py", line 1373
    if(args.iter=='iter_1'  args.iter=='iter_2' ):
                            ^
SyntaxError: invalid syntax
